# langchain-tonic-textual

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
blogs/: announcing-langchain-textual-option2.md  announcing-langchain-textual.md
langchain_textual/: __init__.py  _utilities.py  tools.py
tests/integration_tests/: test_redact.py  test_standard.py
tests/unit_tests/: test_imports.py  test_standard.py
