[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-textual"
version = "0.1.0"
description = "LangChain integration for Tonic Textual PII redaction"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10.0,<4.0.0"
dependencies = [
    "langchain-core>=1.0.0,<2.0.0",
    "tonic-textual>=3.0.0",
]

[dependency-groups]
test = [
    "pytest>=7.3.0,<8.0.0",
    "pytest-asyncio>=0.21.1,<1.0.0",
    "langchain-core",
    "langchain-tests~=1.1.5",
]
lint = ["ruff>=0.13.1,<0.14.0"]
dev = ["langchain-core"]
typing = ["mypy>=1.10.0,<2.0.0", "langchain-core"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = ["compile: compilation tests"]
